--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com' \"this is th"
+    "'vandelay.com' # 'www.vandelay.com' \"this is the start\" +"
    ]
   },
   {
